--- a/site/experimental/experiment.html
+++ b/site/experimental/experiment.html
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
     
     <!-- style and fonts -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style_experimental.css">
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css?family=Baloo" rel="stylesheet">
     
